--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ numpy==1.21.4
 pandas==1.2.2
 pickleshare==0.7.5
 plotly==4.14.3
-statsmodels==0.12.2
+sklearn==0.0
 streamlit==1.0.0
 xgboost==1.5.0
