--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,194 @@ plotly==4.14.3
 sklearn==0.0
 streamlit==1.0.0
 xgboost==1.5.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+ansi2html=1.6.0=py39h6e9494a_1
+anyio=3.3.0=py39h6e9494a_0
+appnope=0.1.2=py39h6e9494a_1
+argon2-cffi=20.1.0=py39h89e85a6_2
+async_generator=1.10=py_0
+attrs=21.2.0=pyhd8ed1ab_0
+babel=2.9.1=pyh44b312d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+bleach=4.1.0=pyhd8ed1ab_0
+brotli-python=1.0.9=py39h9fcab8e_5
+brotlipy=0.7.0=py39h89e85a6_1001
+ca-certificates=2021.10.8=h033912b_0
+category_encoders=2.3.0=pyhd8ed1ab_0
+certifi=2021.10.8=py39h6e9494a_1
+cffi=1.14.6=py39hb71fe58_0
+chardet=4.0.0=py39h6e9494a_1
+charset-normalizer=2.0.0=pyhd8ed1ab_0
+click=8.0.1=py39h6e9494a_0
+colorama=0.4.4=pyh9f0ad1d_0
+conda=4.10.3=py39h6e9494a_4
+conda-package-handling=1.7.3=py39h89e85a6_0
+cryptography=3.4.7=py39ha2c9959_0
+cycler=0.10.0=py_2
+dash=2.0.0=pyhd8ed1ab_0
+dash-core-components=2.0.0=pyhd8ed1ab_0
+dash-html-components=2.0.0=pyhd8ed1ab_0
+dataclasses=0.8=pyhc8e2a94_3
+debugpy=1.4.1=py39h9fcab8e_0
+decorator=5.1.0=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+entrypoints=0.3=pyhd8ed1ab_1003
+flask=2.0.1=pyhd8ed1ab_0
+flask-compress=1.10.1=pyhd8ed1ab_0
+freetype=2.10.4=h4cff582_1
+gmp=6.2.1=h2e338ed_0
+gmpy2=2.1.0b5=py39hab8a6df_0
+htmlmin=0.1.12=py_1
+idna=3.1=pyhd3deb0d_0
+imagehash=4.2.1=pyhd8ed1ab_0
+importlib-metadata=4.8.1=py39h6e9494a_0
+iniconfig=1.1.1=pyh9f0ad1d_0
+ipykernel=6.3.1=py39h71a6800_0
+ipython=7.27.0=py39h71a6800_0
+ipython_genutils=0.2.0=py_1
+ipywidgets=7.6.5=pyhd8ed1ab_0
+itsdangerous=2.0.1=pyhd8ed1ab_0
+jbig=2.1=h0d85af4_2003
+jedi=0.18.0=py39h6e9494a_2
+jinja2=3.0.1=pyhd8ed1ab_0
+joblib=1.0.1=pyhd8ed1ab_0
+jpeg=9d=hbcb3906_0
+json5=0.9.5=pyh9f0ad1d_0
+jsonschema=3.2.0=pyhd8ed1ab_3
+jupyter-dash=0.4.0=pyhd8ed1ab_0
+jupyter_client=7.0.2=pyhd8ed1ab_0
+jupyter_core=4.7.1=py39h6e9494a_0
+jupyter_server=1.11.0=pyhd8ed1ab_0
+jupyterlab=3.0.16=pyhd8ed1ab_0
+jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+jupyterlab_server=2.8.1=pyhd8ed1ab_0
+jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
+kiwisolver=1.3.2=py39hf018cea_0
+lcms2=2.12=h577c468_0
+lerc=2.2.1=h046ec9c_0
+libblas=3.9.0=11_osx64_openblas
+libcblas=3.9.0=11_osx64_openblas
+libcxx=12.0.1=habf9029_0
+libdeflate=1.7=h35c211d_5
+libffi=3.3=h046ec9c_2
+libgfortran=5.0.0=9_3_0_h6c81a4c_23
+libgfortran5=9.3.0=h6c81a4c_23
+liblapack=3.9.0=11_osx64_openblas
+libopenblas=0.3.17=openmp_h3351f45_1
+libpng=1.6.37=h7cec526_2
+libsodium=1.0.18=hbcb3906_1
+libtiff=4.3.0=h1167814_1
+libwebp-base=1.2.1=h0d85af4_0
+llvm-openmp=12.0.1=hda6cdc1_1
+lz4-c=1.9.3=he49afe7_1
+markupsafe=2.0.1=py39h89e85a6_0
+matplotlib=3.4.2=py39h6e9494a_0
+matplotlib-base=3.4.2=py39hb07454d_0
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
+missingno=0.4.2=py_1
+mistune=0.8.4=py39h89e85a6_1004
+more-itertools=8.9.0=pyhd8ed1ab_0
+mpc=1.2.1=hbb51d92_0
+mpfr=4.1.0=h0f52abe_1
+mpmath=1.2.1=pyhd8ed1ab_0
+multimethod=1.4=py_0
+nbclassic=0.3.1=pyhd8ed1ab_1
+nbclient=0.5.4=pyhd8ed1ab_0
+nbconvert=6.1.0=py39h6e9494a_0
+nbformat=5.1.3=pyhd8ed1ab_0
+ncurses=6.2=h2e338ed_4
+nest-asyncio=1.5.1=pyhd8ed1ab_0
+networkx=2.6.3=pyhd8ed1ab_1
+nltk=3.6.2=pyhd8ed1ab_0
+notebook=6.4.3=pyha770c72_0
+numpy=1.21.2=py39h7eed0ac_0
+olefile=0.46=pyh9f0ad1d_1
+openjpeg=2.4.0=h6e7aa92_1
+openssl=1.1.1l=h0d85af4_0
+packaging=21.0=pyhd8ed1ab_0
+pandas=1.3.2=py39h4d6be9b_0
+pandas-profiling=3.1.0=pyhd8ed1ab_0
+pandoc=2.14.2=h0d85af4_0
+pandocfilters=1.4.2=py_1
+parso=0.8.2=pyhd8ed1ab_0
+patsy=0.5.1=py_0
+pendulum=2.1.2=pyhd8ed1ab_1
+pexpect=4.8.0=pyh9f0ad1d_2
+phik=0.12.0=py39hb8eb319_1
+pickleshare=0.7.5=py_1003
+pillow=8.3.2=py39he9bb72f_0
+pip=21.2.4=pyhd8ed1ab_0
+plotly=5.3.1=pyhd8ed1ab_0
+pluggy=1.0.0=py39h6e9494a_1
+prometheus_client=0.11.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.20=pyha770c72_0
+ptyprocess=0.7.0=pyhd3deb0d_0
+py=1.10.0=pyhd3deb0d_0
+pybind11-abi=4=hd8ed1ab_3
+pycosat=0.6.3=py39h89e85a6_1006
+pycparser=2.20=pyh9f0ad1d_2
+pydantic=1.8.2=py39h89e85a6_2
+pygments=2.10.0=pyhd8ed1ab_0
+pyopenssl=20.0.1=pyhd8ed1ab_0
+pyparsing=2.4.7=pyh9f0ad1d_0
+pyrsistent=0.17.3=py39h89e85a6_2
+pysocks=1.7.1=py39h6e9494a_3
+pytest=6.2.5=py39h6e9494a_0
+python=3.9.6=hd187cdc_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python.app=1.3=py39h89e85a6_5
+python_abi=3.9=2_cp39
+pytz=2021.1=pyhd8ed1ab_0
+pytzdata=2020.1=pyh9f0ad1d_0
+pywavelets=1.2.0=py39hc89836e_0
+pyyaml=6.0=py39h89e85a6_3
+pyzmq=22.2.1=py39h7fec2f1_0
+readline=8.1=h05e3726_0
+regex=2021.8.28=py39h89e85a6_0
+requests=2.26.0=pyhd8ed1ab_0
+requests-unixsocket=0.2.0=py_0
+retrying=1.3.3=py_2
+ruamel_yaml=0.15.80=py39h89e85a6_1004
+scikit-learn=0.24.2=py39h4b1dcc9_0
+scipy=1.7.1=py39h056f1c0_0
+seaborn=0.11.1=hd8ed1ab_1
+seaborn-base=0.11.1=pyhd8ed1ab_1
+send2trash=1.8.0=pyhd8ed1ab_0
+setuptools=58.0.4=py39h6e9494a_0
+six=1.16.0=pyh6c4a22f_0
+sniffio=1.2.0=py39h6e9494a_1
+sqlite=3.36.0=h23a322b_1
+statsmodels=0.12.2=py39hc89836e_0
+sympy=1.8=py39h6e9494a_0
+tangled-up-in-unicode=0.1.0=pyhd8ed1ab_0
+tenacity=8.0.1=pyhd8ed1ab_0
+terminado=0.12.1=py39h6e9494a_0
+testpath=0.5.0=pyhd8ed1ab_0
+threadpoolctl=2.2.0=pyh8a188c0_0
+tk=8.6.11=h5dbffcc_1
+toml=0.10.2=pyhd8ed1ab_0
+tornado=6.1=py39h89e85a6_1
+tqdm=4.62.2=pyhd8ed1ab_0
+traitlets=5.1.0=pyhd8ed1ab_0
+typing-extensions=4.0.0=hd8ed1ab_0
+typing_extensions=4.0.0=pyha770c72_0
+tzdata=2021a=he74cb21_1
+urllib3=1.26.6=pyhd8ed1ab_0
+visions=0.7.4=pyhd8ed1ab_0
+watermark=2.2.0=pypi_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webencodings=0.5.1=py_1
+websocket-client=0.57.0=py39h6e9494a_4
+werkzeug=2.0.1=pyhd8ed1ab_0
+wheel=0.37.0=pyhd8ed1ab_1
+widgetsnbextension=3.5.1=py39h6e9494a_4
+xz=5.2.5=haf1e3a3_1
+yaml=0.2.5=haf1e3a3_0
+zeromq=4.3.4=he49afe7_1
+zipp=3.5.0=pyhd8ed1ab_0
+zlib=1.2.11=h7795811_1010
+zstd=1.5.0=h582d3a0_0
